# alps-looper

./: .gitattributes  AUTHORS  CHECK  CITATIONS.txt  CMakeLists.txt  CNAME  ChangeLog  ChangeLog-3.x  ChangeLog.parallel  LICENSE  Makefile.am  Makefile.dep  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  amida.C  amida.h  amida2.h  bootstrap  configure  configure.ac  configure.in  copyright.C  deque.C  deque.h  diag.C  diag.op  evaluate.C  fill_duration.C  graph.h  header.txt  include-looper.mk.in  index.html  index_helper.C  ising.C  lattices.xml  loop.C  loop.h  (+100 more)
check/: .cvsignore  Makefile.am  Makefile.in  chain  chain-1  chain-2  chain-3  chain-4  chain-5  chain-6  chain-e  chain-e.in  chain-p  chain-p.in  chain.gp.in  check-params  dterm-1  dterm-2  dterm-3  dterm.gp.in  evaluate-chain.sh  evaluate-site.sh  evaluate-triangle.sh  evaluate.sh.in  extract-1.xml  kagome-1  kagome-2  kagome-3  kagome-4  kagome.gp  kagome.gp.in  lattices.xml  models.xml  plot-ene  plot-energy  plot-m  plot-m2  plot-m4  plot-sheat  plot-sign  (+48 more)
config/: ac_alps.m4  ac_bindings.m4  ac_lapack.m4  ac_parapack.m4  extract_date.sh  extract_version.sh  looper-config.cmake.in  ltmain.sh  preamble.in  run-test  run_test_mpi.cmake  update_preamble  update_version  version.in
config/CMake/: run_test.cmake
doc/: Makefile.am  Makefile.in  anneal.eps  communication-2.graffle  communication.graffle  download.html  download.txt  index.html  index.md  index.txt  index_ja.html  index_ja.txt  parallel.ja.html  parallel.ja.txt  zigzag-union-find.graffle
ed/: .cvsignore  Makefile.am  Makefile.in  diag.C  diag.ip  diag.ip.in  diag.op  extract.sh  heisenberg.ip  ising-x.ip  ising-z.ip  lattices.xml  models.xml  param.in  run-diag.sh  xy-x.ip  xy-z.ip
export/: download.html  download.txt
extras/: CMakeLists.txt  Makefile.am  Makefile.in
extras/corrlen/: CMakeLists.txt  Makefile.am  Makefile.in  corrlen.op  corrlen.op.bak  corrlen_config.h  corrlen_ns.ip  corrlen_ns.op
extras/gap/: CMakeLists.txt  Makefile.am  Makefile.in  gap.op  gap_config.h  gap_ns.ip  gap_ns.op
extras/gap4/: CMakeLists.txt  gap4.ip  gap4.ip-22  gap4.ip-222  gap4.ip-23  gap4.ip-24  gap4.ip-32  gap4.ip-4  gap4.ip-42  gap4.ip-42s  gap4.ip-6  gap4.ip-8  gap4.op  gap4.op-2  gap4.op-3  gap4.op-4  gap4.op-6  gap4.op-8  gap4_config.h  test.sh.in
extras/localsus/: CMakeLists.txt  Makefile.am  Makefile.in  localsus.ip  localsus.op  localsus_config.h  localsus_ns.ip  localsus_ns.op
extras/looper/: gap_measurement.h  localsus_measurement.h  transmag_measurement.h
extras/nonstandard/: Makefile.am  Makefile.in  ising_config.h  ising_ns.ip  ising_ns.op  xyz_model.xml.in  xyz_ns.ip  xyz_ns.op
extras/parallel/: CMakeLists.txt  Makefile.am  Makefile.in  loop_factory_mpi.h  loop_pm.C  parallel.ip  parallel.op-3  parallel_config.h  parallel_ns.C  parallel_ns.ip  parallel_ns.op  parallel_ns.op-2  parallel_ns.op-4  path_integral_mpi.C  test.sh.in
extras/qwl/: Makefile.am  Makefile.in  sse.C  sse.h  sse_ns.C  sse_ns.ip  sse_ns.op
extras/simple/: Makefile.am  Makefile.in  simple_config.h
extras/top/: CMakeLists.txt  Makefile.am  Makefile.in  top.ip  top.op  top_config.h  top_ns.ip  top_ns.op
extras/transmag/: CMakeLists.txt  Makefile.am  Makefile.in  alternating_chain.xml.in  transmag.ip  transmag.op  transmag_config.h  transmag_ns.ip  transmag_ns.op
extras/xyz/: CMakeLists.txt  Makefile.am  Makefile.in  xyz.ip  xyz.op  xyz_config.h  xyz_model.xml.in  xyz_ns.ip  xyz_ns.op
looper/: alternating_tensor.h  amida.h  atomic.h  atomic_impl.h  capacity.h  capacity_mpi.h  cluster.h  config.h.in  copyright.h  copyright.h.in  correlation.h  correlation_length.h  crop.h  custom.h  custom_impl.h  divide_if_positive.h  dumb_measurement.h  energy.h  evaluate.h  evaluator.h  evaluator_impl.h  exact_diag.h  exact_diagonalization.h  expand.h  fill_duration.h  find_bridge.h  find_bridges.h  findbridge.h  flatten_matrix.h  fortran.h  gap.h  generate_seed.h  graph.h  graph_impl.h  histogram.h  integer_range.h  lapack.h  lattice.h  localsus.h  location.h  (+48 more)
migration/svn2git-20151009/: svn-logs  svn-revs  svn-tags  svn2git.sh
simple/: Makefile.am  Makefile.in  README.ja  common.h  loop.C  loop.op  loop_mpi.C  loop_mpi.op-1  loop_mpi.op-2  loop_mpi.op-4  observable.h  options.h  parallel.h  union_find.h
standalone/: Makefile.am  Makefile.in  README.en  README.ja  common.h  loop.C  loop.op  loop_mpi.C  loop_mpi.op-1  loop_mpi.op-2  loop_mpi.op-3  loop_mpi.op-4  observable.h  options.h  parallel.h  union_find.h
test/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.dep  Makefile.in  alternating_tensor.C  alternating_tensor.op  amida.C  amida.op  assign.C  assign_pod.C  atomic.C  atomic.op  bond_matrix.C  bond_matrix.ip  bond_matrix.op  compatibility.C  compatibility.op  edge_type.C  edge_type.op  fill_duration.C  fill_duration.ip  fill_duration.op  fill_duration.output  filtered_graph.C  filtered_graph.op  find_bridge.C  find_bridge.op  find_bridges.C  find_bridges.op  gels.C  gels.op  generate_01.C  generate_01.op  gesvd.C  gesvd.ip  gesvd.op  hypercubic.C  hypercubic.ip  hypercubic.op  (+76 more)
v3.1/: Makefile.am  Makefile.in  evaluate.C  loop.C  loop_evaluate.C  loop_factory.C  loop_factory.h  loop_ns.C  loop_worker.h  looper.h
v3.1/looper/: amida.h  exact_diag.h  fill_duration.h  graph.h  lapack.h  measurement.h  model.h  node.h  operator.h  path_integral.h  permutation.h  qmc.h  random_choice.h  sign.h  sse.h  union_find.h  util.h  vector_helper.h  weight.h
